Bug 571576 - Cleanup deprecated constructors jdt.debug
by search & replace in *.java
but not in Compliance* and Cleanup*
new {BasicType} -> {BasicType}.valuefOf

Bug: 571576
Change-Id: I808b0ee06aa569d7e1eb82b35b9a5d49d8b157d4
Signed-off-by: jkubitz <jkubitz-eclipse@gmx.de>